Cancel button style + overflow fix

--- a/app/src/marketplace/components/Modal/Dialog/Container/container.pcss
+++ b/app/src/marketplace/components/Modal/Dialog/Container/container.pcss
@@ -1,4 +1,5 @@
 @import 'variables.pcss';
+@import 'selectors.pcss';
 
 .modalContainer {
   background: #FFFFFF;
@@ -9,6 +10,16 @@
   min-height: 320px;
   display: flex;
   flex-direction: column;
+
+  :global(.btn.btn-link) {
+    color: var(--greyDark2);
+    font-family: 'IBM Plex Mono', sans-serif;
+
+    &:--enter {
+      background-color: var(--greyLight3);
+      color: var(--greyDark);
+    }
+  }
 }
 
 @media (--xs) {
